Updates and added creator info to simple recipe
